--- a/fact_index/src/style/color_themes/light.scss
+++ b/fact_index/src/style/color_themes/light.scss
@@ -88,7 +88,7 @@ $theme_light: map.merge(global.$theme-global, (
 
                   // Misc backgrounds
                   color-bg-white: #fff, // Pure white, for full contrast
-                  color-bg-grey: #f5f7f8, // Modern blue-grey, highly distinct from white
+                  color-bg-grey: #ffffff, // Modern blue-grey, highly distinct from white
                   color-bg-offwhite: #f7f4ec, // Sand/warm offwhite, stands out from white and passes AAA
                   color-bg-neutral: #dde7f9, // Gentle blue-neutral, also passes AAA
 
