--- a/fact_index/src/style/color_themes/dark.scss
+++ b/fact_index/src/style/color_themes/dark.scss
@@ -89,6 +89,7 @@ $theme_dark: map.merge(global.$theme-global, ( // Navbar
       color-chip-text: #ffffff,
 
       // Misc backgrounds
+      color-bg: #1b2638,
       color-bg-white: #181b20,
       color-bg-grey: #23272f,
       color-bg-offwhite: #252b39,
