--- a/fact_index/src/App.scss
+++ b/fact_index/src/App.scss
@@ -12,7 +12,7 @@
   margin:0;
   display: flex;
   flex-direction: column;
-  background: var(--theme-color-bg-grey);
+  background: var(--theme-color-bg);
   color: var(--theme-color-text);
 
   // Makes main content fill space below NavBar
@@ -67,7 +67,7 @@
 //     font-weight: 600;
 //     font-size: 1.1em;
 //     padding: 0.4em 0.8em;
-//     border-radius: 4px;
+//     border-radius: 8px;
 //     transition: background 0.2s;
 
 //     &:hover, &.active {
@@ -85,7 +85,7 @@
 //     a {
 //       font-size: 1em;
 //       padding: 0.9em 0.6em;
-//       border-radius: 3px;
+//       border-radius: 8px;
 //       text-align: center;
 //     }
 //   }
