--- a/fact_index/src/atoms/Button.module.scss
+++ b/fact_index/src/atoms/Button.module.scss
@@ -4,7 +4,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  border-radius: 0.5rem;
+  border-radius: 8px;
   font-weight: 500;
   font-family: inherit;
   cursor: pointer;
