--- a/fact_index/src/pages/FactDatabase/FactDatabase.module.scss
+++ b/fact_index/src/pages/FactDatabase/FactDatabase.module.scss
@@ -8,7 +8,8 @@
   min-height: 100vh;
   padding: 2.5rem 1rem;
   font-family: 'Inter', 'Segoe UI', Arial, sans-serif;
-  background: var(--theme-color-bg-offwhite);
+    background: var(--theme-color-bg);
+
 
   @include mixins.respond-to-width(mobile) {
     padding: 1.2rem 0.5rem;
@@ -66,7 +67,7 @@
   color: var(--theme-color-button-text);
   font-size: 1.1rem;
   border: 1px solid var(--theme-color-button-border);
-  border-radius: 6px;
+  border-radius: 8px;
   padding: 0.55em 1.3em;
   font-weight: 500;
   cursor: pointer;
@@ -101,7 +102,7 @@
   input[type="text"] {
     width: 320px;
     padding: 0.45rem 0.7rem;
-    border-radius: 5px;
+    border-radius: 8px;
     border: 1px solid var(--theme-color-border);
     background: var(--theme-color-bg-white);
     color: var(--theme-color-text);
@@ -119,7 +120,7 @@
 
   button {
     padding: 0.44rem 1.2rem;
-    border-radius: 5px;
+    border-radius: 8px;
     border: 1px solid var(--theme-color-button-border);
     background: var(--theme-color-button-bg);
     color: var(--theme-color-button-text);
@@ -177,17 +178,17 @@
   font-size: 1rem;
   color: var(--theme-color-text);
 
-  @include mixins.respond-to-width(netbook) {
-    min-width: 160px;
-    padding: 1rem 0.6rem;
-  }
-  @include mixins.respond-to-width(mobile) {
-    width: 100%;
-    max-width: none;
-    margin-right: 0;
-    margin-bottom: 1rem;
-    padding: 1.2rem 0.5rem;
-  }
+  // @include mixins.respond-to-width(netbook) {
+  //   min-width: 160px;
+  //   padding: 1rem 0.6rem;
+  // }
+  // @include mixins.respond-to-width(mobile) {
+  //   width: 100%;
+  //   max-width: none;
+  //   margin-right: 0;
+  //   margin-bottom: 1rem;
+  //   padding: 1.2rem 0.5rem;
+  // }
 }
 
 .factDatabase__results {
@@ -201,11 +202,11 @@
 .factDatabase__card {
   background: var(--theme-color-bg-white);
   color: var(--theme-color-text);
-  border-radius: 12px;
+  border-radius: 8px;
   box-shadow: 0 2px 10px var(--theme-shadow-2);
 
   @include mixins.respond-to-width(mobile) {
-    border-radius: 7px;
+    border-radius: 8px;
     box-shadow: 0 1px 4px var(--theme-shadow-1);
   }
 }
@@ -241,7 +242,7 @@
 
 .factDatabase__loadingMessage {
   margin: 2.2rem 0;
-  color: var(--theme-color-loading-message);
+  color: var(--theme-color-end-message);
   font-size: 1.11rem;
   text-align: center;
 
@@ -285,5 +286,5 @@
 }
 ::-webkit-scrollbar-thumb {
   background: var(--theme-color-accent-blue4);
-  border-radius: 4px;
+  border-radius: 8px;
 }
